test/TestSuite/Syntax/Errors/bad_time_zone.tjp
project test "Test" "1.0" 2007-08-26 +1w {
# MARK: error 3 bad_time_zone
  timezone "foo/bar"
}

task foo "Foo"
